fix: 修复Dict.vue字典项列表数据结构不匹配问题
- 前端API返回类型从分页对象改为数组
- itemTableData数据结构从{records,total}改为直接数组
- 移除模板中对.records的引用
- 对齐后端DictItemController的返回格式